# tetris

./: .clang-format  .gitignore  CMakeLists.txt  README-en.md  README.md  rv_linker.lds
.cache/clangd/index/: main.c.08665F4A01DE9757.idx
src/: arith64.c  block.c  block.h  board.c  communicate.c  communicate.h  draw.c  draw.h  event.h  falling_mino.c  fixednum.h  garbage.c  garbage.h  graphics.c  graphics.h  graphics_riscv.c  graphics_x86.c  handle.c  handle.h  input.c  input.h  libdevice.c  libdevice.h  main.c  map.c  map.h  queue.c  random.c  random.h  sdl_interface.c  sdl_interface.h  tetris.h  time_interface.h
